test: preserve Java 17 compatibility in SDK regressions
Signed-off-by: Sam Goodwin <sam@alchemy.run>